[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "flannmicrowave"
dynamic = ["version"] 
authors = [
    { name = "Leon Knight", email = "leon.knight@flann.com" }
]
description = "Flann's programmable instruments library"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

license = "MIT"
license-files = ["LICEN[CS]E*"]

dependencies = [
    "pyserial >= 3.5"
]

keywords = [
    "Flann",
    "instrument control",
    "programmable instruments",
    "rf engineering",
    "microwave engineering",
    "radio frequency",
    "microwave",
    "waveguide"
]

[project.urls]
Homepage = "https://flann.com/"
Repository = "https://github.com/flannmicrowave/FlannController"
Issues = "https://github.com/flannmicrowave/FlannController/issues"

[tool.setuptools.dynamic]
version = {attr = "flann.__version__"}

[tool.setuptools.packages.find]
include = ["flann*"]